; ModuleID = '/home/carl/AnghaBench/i3/src/extr_handlers.c_property_handlers_init.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_handlers.c_property_handlers_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@sndisplay = common dso_local global i32 0, align 4
@conn_screen = common dso_local global i32 0, align 4
@startup_monitor_event = common dso_local global i32 0, align 4
@A__NET_WM_NAME = common dso_local global i32 0, align 4
@property_handlers = common dso_local global %struct.TYPE_2__* null, align 8
@XCB_ATOM_WM_HINTS = common dso_local global i32 0, align 4
@XCB_ATOM_WM_NAME = common dso_local global i32 0, align 4
@XCB_ATOM_WM_NORMAL_HINTS = common dso_local global i32 0, align 4
@A_WM_CLIENT_LEADER = common dso_local global i32 0, align 4
@XCB_ATOM_WM_TRANSIENT_FOR = common dso_local global i32 0, align 4
@A_WM_WINDOW_ROLE = common dso_local global i32 0, align 4
@XCB_ATOM_WM_CLASS = common dso_local global i32 0, align 4
@A__NET_WM_STRUT_PARTIAL = common dso_local global i32 0, align 4
@A__NET_WM_WINDOW_TYPE = common dso_local global i32 0, align 4
@A__MOTIF_WM_HINTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @property_handlers_init() #0 {
  %1 = load i32, i32* @sndisplay, align 4
  %2 = load i32, i32* @conn_screen, align 4
  %3 = load i32, i32* @startup_monitor_event, align 4
  %4 = call i32 @sn_monitor_context_new(i32 %1, i32 %2, i32 %3, i32* null, i32* null)
  %5 = load i32, i32* @A__NET_WM_NAME, align 4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i64 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store i32 %5, i32* %8, align 4
  %9 = load i32, i32* @XCB_ATOM_WM_HINTS, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 1
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 4
  %13 = load i32, i32* @XCB_ATOM_WM_NAME, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 2
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 4
  %17 = load i32, i32* @XCB_ATOM_WM_NORMAL_HINTS, align 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i64 3
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  store i32 %17, i32* %20, align 4
  %21 = load i32, i32* @A_WM_CLIENT_LEADER, align 4
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 4
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i32 %21, i32* %24, align 4
  %25 = load i32, i32* @XCB_ATOM_WM_TRANSIENT_FOR, align 4
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i64 5
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 4
  %29 = load i32, i32* @A_WM_WINDOW_ROLE, align 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 6
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  store i32 %29, i32* %32, align 4
  %33 = load i32, i32* @XCB_ATOM_WM_CLASS, align 4
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i64 7
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  store i32 %33, i32* %36, align 4
  %37 = load i32, i32* @A__NET_WM_STRUT_PARTIAL, align 4
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i64 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  store i32 %37, i32* %40, align 4
  %41 = load i32, i32* @A__NET_WM_WINDOW_TYPE, align 4
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i64 9
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  store i32 %41, i32* %44, align 4
  %45 = load i32, i32* @A__MOTIF_WM_HINTS, align 4
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** @property_handlers, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i64 10
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 0
  store i32 %45, i32* %48, align 4
  ret void
}

declare dso_local i32 @sn_monitor_context_new(i32, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
